--- a/startbootstrap-sb-admin-2-gh-pages/index.html
+++ b/startbootstrap-sb-admin-2-gh-pages/index.html
@@ -92,7 +92,7 @@
 
             <!-- Heading -->
             <div class="sidebar-heading">
-                Interface
+                Userr
             </div>
 
            <!-- Nav Item - Pages Collapse Menu -->
