--- a/startbootstrap-sb-admin-2-gh-pages/daftarakun.html
+++ b/startbootstrap-sb-admin-2-gh-pages/daftarakun.html
@@ -145,15 +145,15 @@ nav ul li a.register {
     padding: 10px;
 }
 
-/* Hover effect untuk tautan "Login" dan "Daftar" */
+
 nav ul li a.login:hover,
 nav ul li a.register:hover {
-    background-color: #2980b9; /* Warna lebih gelap untuk "Login" saat di-hover */
+    background-color: #2980b9; 
 }
 
-/* Hover effect untuk "Daftar" */
+
 nav ul li a.register:hover {
-    background-color: #c0392b; /* Warna lebih gelap untuk "Daftar" saat di-hover */
+    background-color: #c0392b; 
 }
         @media (max-width: 768px) {
             .content {
@@ -162,11 +162,11 @@ nav ul li a.register:hover {
             }
 
             .content img {
-                max-width: 70%; /* Menyesuaikan ukuran gambar */
+                max-width: 70%; 
             }
 
             .form-container {
-                width: 100%; /* Formulir memenuhi lebar layar */
+                width: 100%; 
             }
 
             .form-container .form-group {
@@ -193,7 +193,7 @@ nav ul li a.register:hover {
     </div>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="homeakun.php">Home</a></li>
             <li><a href="#">Kirim Feedback</a></li>
             <li><a href="#">Tentang Kami</a></li>
             <li><a href="#">FAQ</a></li>
