--- a/startbootstrap-sb-admin-2-gh-pages/index.html
+++ b/startbootstrap-sb-admin-2-gh-pages/index.html
@@ -178,7 +178,7 @@
     </a>
     <div id="collapseFeedback" class="collapse" aria-labelledby="headingFeedback" data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
-            <a class="collapse-item" href="buttons.html">Lihat Feedback</a>
+            <a class="collapse-item" href="feedbaackadm.php">Lihat Feedback</a>
         </div>
     </div>
 </li>
